Add reusable variant preprocessing and CLI reference